RESOLVED FIXED165138
[GTK] Database process should not initialize gtk
https://bugs.webkit.org/show_bug.cgi?id=165138
Summary [GTK] Database process should not initialize gtk
Carlos Garcia Campos
Reported 2016-11-29 06:04:10 PST
It doesn't use GTK+ at all.
Attachments
Patch (1.62 KB, patch)
2016-11-29 06:05 PST, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2016-11-29 06:05:48 PST
Sergio Villar Senin
Comment 2 2016-11-29 06:34:29 PST
Comment on attachment 295591 [details] Patch Right. I does not and it should not use GTK+
Carlos Garcia Campos
Comment 3 2016-11-29 23:15:07 PST
Note You need to log in before you can comment on or make changes to this bug.