[GTK] Database process should not initialize gtk https://bugs.webkit.org/show_bug.cgi?id=165138

Reviewed by Sergio Villar Senin.

It doesn't use GTK+ at all.

* DatabaseProcess/gtk/DatabaseProcessMainGtk.cpp:
(WebKit::DatabaseProcessMainUnix):
(): Deleted.

Canonical link: https://commits.webkit.org/182808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209122 268f45cc-cd09-0410-ab3c-d52691b4dbfc